* Added post-formats: aside, quote, and status
* Added clearing `div` at top of 'author' and 'page' templates
* Added project TODO section to 'index.php'
* Changed `BNS Theme Version` to `DMM Theme Version` with extensive re-writes to text displayed
* Changed `my_theme_data` to `active_theme_data` in `DMM Theme Version`
* Implemented 'desk-mess-mirrored' loop in 404, archive, author, index (home, front-page), page, single templates
* Re-defined each widget area separately to allow for descriptions to show end-user more details about each area
* Removed 'Home" link code from `dmm_list_pages`
* Removed unused images (from IE6 support)
* Renamed `BNS Dynamic Copyright` to `DMM Dynamic Copyright` (refactored changelog)
* Renamed `BNS Modified Post` to `DMM Modified Post` (refactored changelog)
* Replaced TEMPLATEPATH constant with `get_template_directory_uri`
* Rewrote class used in 'author' template to add author role as a class element
* Updated documentation to clarify `DMM Dynamic Copyright` parameters
* Updated 'readme.txt' information - NB: All open and new TODO items will be found in their appropriate file going forward from this version

= CSS =
* Added some minor style to forms
* Added 'Order of Contents' reference to the stylesheet with minor re-organization
* Changed bottom of post to have smaller separating margin and added a bottom border to better delineate posts
* Removed the right and bottom borders from the gallery images; and added additional elements to handle galleries up to 10 columns wide
* Removed (using comments) `background property` from `code` element
* Removed margins from a blockquote if it is within another blockquote

= Internet Browsers Reviewed =
* Apple Safari v5.1.1 (Mac)
* Apple Safari v5.1.2 (PC)
* Firefox v8.0.1 (Mac)
* Firefox v8.0.1 (PC)
* Google Chrome v15.0
* Internet Explorer v9.0
* Opera v11.60

/** ------------------------------------------------------------------------- */

== Version 1.9.1 ==
* added CSS optimizations