@@ -14,11 +14,9 @@
  * @author      Edward Caissie <edward.caissie@gmail.com>
  * @copyright   Copyright (c) 2009-2011, Edward Caissie
  *
- * @internal    called with `get_template_part( 'desk-mess-mirrored', get_post_format() )`
+ * @uses        get_template_part( 'desk-mess-mirrored', get_post_format() )
  */
 ?>
-<div class="clear">&nbsp;</div>
-<!-- Hack: the non-breaking space keeps the content below the menu when menus contain many top-level items -->
 <div <?php post_class(); ?> id="post-<?php the_ID(); ?>">
     <div class="transparent glyph"><?php dmm_quote_glyph(); ?></div>
     <h1>
